--- a/frontend/src/components/common/Button/Button.css
+++ b/frontend/src/components/common/Button/Button.css
@@ -87,4 +87,59 @@
 
 .btn-text {
   letter-spacing: 0.3px;
+}
+
+.btn-disabled {
+  background-color: #E9E9E9;
+  color: #A0A0A0;
+  cursor: not-allowed;
+  border: 1px solid #D8D8D8;
+  box-shadow: none;
+  opacity: 0.7;
+}
+
+.btn-disabled:hover {
+  background-color: #E9E9E9;
+  color: #A0A0A0;
+  border: 1px solid #D8D8D8;
+}
+
+.btn-disabled .btn-icon {
+  opacity: 0.7;
+  color: #A0A0A0;
+}
+
+.btn[disabled] {
+  background-color: #E9E9E9;
+  color: #A0A0A0;
+  cursor: not-allowed;
+  border: 1px solid #D8D8D8;
+  box-shadow: none;
+  opacity: 0.7;
+  pointer-events: none;
+}
+
+.btn[disabled]:hover {
+  background-color: #E9E9E9;
+  color: #A0A0A0;
+  border: 1px solid #D8D8D8;
+}
+
+.btn-success {
+  background-color: #32D583;
+  color: #FFFFFF;
+  border: 1px solid #32D583;
+  padding: 12px 24px;
+  font-size: 16.9px;
+  font-weight: 600;
+  text-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+.btn-success:hover {
+  background-color: #2eba61;
+  border-color: #2eba61;
+}
+
+.btn-success .btn-icon {
+  color: #FFFFFF;
 } 
